Realocada os arquivos html para pasta _html e criada as pastas _estilos e _script

--- a/Prj_Pizza_Proz/_html/promocoes.html
+++ b/Prj_Pizza_Proz/_html/promocoes.html
@@ -49,24 +49,24 @@
     <div id="promocao-mestre">
         <div id="promocao-esqueda">
 
-            <img src="./_imagens/botao-de-seta-para-a-esquerda.png" alt="">
+            <img src="../_imagens/botao-de-seta-para-a-esquerda.png" alt="">
         </div>
         <div id="promocao-centro">
             <div id="promocoes">
                 <ul>
-                    <li><img src="./_imagens/pizza-calabresa.jpg"></li>
+                    <li><img src="../_imagens/pizza-calabresa.jpg"></li>
                     <li><h5>Calabresa</h5>
                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
                             velit.</p></li>
                 </ul>
                 <ul>
-                    <li><img src="./_imagens/pizza-mussarela.jpg"></li>
+                    <li><img src="../_imagens/pizza-mussarela.jpg"></li>
                     <li><h5>Mussarela</h5>
                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
                             velit.</p></li>
                 </ul>
                 <ul>
-                    <li><img src="./_imagens/pizza-portuguesa.jpg"></li>
+                    <li><img src="../_imagens/pizza-portuguesa.jpg"></li>
                     <li><h5>Portuguesa</h5>
                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
                             velit.</p></li>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div id="promocao-direita">
-            <img src="./_imagens/setas-direitas.png" alt="">
+            <img src="../_imagens/setas-direitas.png" alt="">
         </div>
     </div>
 </section>
