--- a/Prj_Pizza_Proz/index.html
+++ b/Prj_Pizza_Proz/index.html
@@ -17,7 +17,7 @@
         <ul id="esquerda">
             <li><a href="index.html">HOME</a></li>
             <li><a href="#">CARDÁPIO</a></li>
-            <li><a href="promocoes.html">PROMOÇÕES</a></li>
+            <li><a href="_html/promocoes.html">PROMOÇÕES</a></li>
             <li><a href="#">SOCIAL</a></li>
             <li><a href="#">SOBRE NÓS</a></li>
         </ul>
@@ -29,7 +29,7 @@
     <div id="chamada">
         <h1>VAMOS PEDIR UMA PIZZA?!!!!</h1>
         <h4>Sua Pizza favorita, quentinha e sem demora!!!</h4>
-        <a href="promocoes.html">FICOU COM ÁGUA NA BOCA? VEJA NOSSAS PROMOÇÕES!!!</a>
+        <a href="_html/promocoes.html">FICOU COM ÁGUA NA BOCA? VEJA NOSSAS PROMOÇÕES!!!</a>
     </div>
 </header>
 <div id="transicao-rodape"></div>
