Adicionados _estilos: animação.css, layout.css e tipografia.css, _imagens: novas imagens, _html: cardápio.html, promoções.html e index.html

--- a/Prj_Pizza_Proz/_html/promocoes.html
+++ b/Prj_Pizza_Proz/_html/promocoes.html
@@ -6,9 +6,30 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Promoções</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:wght@300;400;600;700&family=Pacifico&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="../_estilos/layout.css">
+    <link rel="stylesheet" href="../_estilos/tipografia.css">
 </head>
 <body>
+
+<header id="promo">
+    <nav>
+        <div id="logo"></div>
+        <ul id="esquerda">
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../_html/cardapio.html">CARDÁPIO</a></li>
+            <li><a href="../_html/promocoes.html">PROMOÇÕES</a></li>
+            <li><a href="#">SOCIAL</a></li>
+            <li><a href="#">SOBRE NÓS</a></li>
+        </ul>
+        <ul id="direita">
+            <li><a id="criar-conta" href="#">CONTATO</a></li>
+        </ul>
+    </nav>
+</header>
 
 <section id="domingo-perfeito">
     <div id="domingo-perfeito-esquerda">
@@ -43,96 +64,108 @@
         <div class="queijo"></div>
     </div>
 </section>
+
 <section id="promocao">
-
-
     <div id="promocao-mestre">
-        <div id="promocao-esqueda">
-
-            <img src="../_imagens/botao-de-seta-para-a-esquerda.png" alt="">
+        <div id="promocao-esquerda">
+            <ion-icon name="arrow-back-circle-outline"></ion-icon>
         </div>
         <div id="promocao-centro">
             <div id="promocoes">
                 <ul>
-                    <li><img src="../_imagens/pizza-calabresa.jpg"></li>
-                    <li><h5>Calabresa</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="../_imagens/pizza-calabresa.jpg" alt=""></li>
+                    <li>
+                        <h5>Calabresa</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src="../_imagens/pizza-mussarela.jpg"></li>
-                    <li><h5>Mussarela</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="../_imagens/pizza-mussarela.jpg" alt=""></li>
+                    <li>
+                        <h5>Mussarela</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src="../_imagens/pizza-portuguesa.jpg"></li>
-                    <li><h5>Portuguesa</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="../_imagens/pizza-portuguesa.jpg" alt=""></li>
+                    <li>
+                        <h5>Portuguesa</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
                 <ul>
-                    <li><img src=""></li>
-                    <li><h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                            velit.</p></li>
+                    <li><img src="" alt=""></li>
+                    <li>
+                        <h5>SABOR</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
                 </ul>
+
             </div>
         </div>
         <div id="promocao-direita">
-            <img src="../_imagens/setas-direitas.png" alt="">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
         </div>
     </div>
 </section>
 
-
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
