--- a/Prj_Pizza_Proz/_html/Index.html
+++ b/Prj_Pizza_Proz/_html/Index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:wght@300;400;600;700&family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="homepg.css">
+  <link rel="stylesheet" href="../_estilos/homepg.css">
 </head>
 
 <body>
