--- a/Prj_Pizza_Proz/_html/formulario.html
+++ b/Prj_Pizza_Proz/_html/formulario.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="formpg.css">
+  <link rel="stylesheet" href="../_estilos/formpg.css">
   <title>Cadastro</title
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
