Foram adicionados os estilos formpg.css, homepg.css e alterado layout.css, alterados cardápio.html, formulário.html, promoções.html, sobre.html e index.html

--- a/Prj_Pizza_Proz/_html/cardapio.html
+++ b/Prj_Pizza_Proz/_html/cardapio.html
@@ -25,10 +25,10 @@
             <li><a href="cardapio.html">CARDÁPIO</a></li>
             <li><a href="../_html/promocoes.html">PROMOÇÕES</a></li>
             <li><a href="#">SOCIAL</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="sobre.html">SOBRE NÓS</a></li>
         </ul>
         <ul id="direita">
-            <li><a id="criar-conta" href="#">CONTATO</a></li>
+            <li><a id="criar-conta" href="formulario.html">CONTATO</a></li>
 
         </ul>
     </nav>
