--- a/Prj_Pizza_Proz/_html/promocoes.html
+++ b/Prj_Pizza_Proz/_html/promocoes.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Promoções</title>
+    <title>Pizzaria PROZ NÓS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:wght@300;400;600;700&family=Pacifico&display=swap"
@@ -23,10 +23,10 @@
             <li><a href="../_html/cardapio.html">CARDÁPIO</a></li>
             <li><a href="../_html/promocoes.html">PROMOÇÕES</a></li>
             <li><a href="#">SOCIAL</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="sobre.html">SOBRE NÓS</a></li>
         </ul>
         <ul id="direita">
-            <li><a id="criar-conta" href="#">CONTATO</a></li>
+            <li><a id="criar-conta" href="formulario.html">CONTATO</a></li>
         </ul>
     </nav>
 </header>
