--- a/Prj_Pizza_Proz/index.html
+++ b/Prj_Pizza_Proz/index.html
@@ -24,10 +24,10 @@
             <li><a href="_html/cardapio.html">CARDÁPIO</a></li>
             <li><a href="_html/promocoes.html">PROMOÇÕES</a></li>
             <li><a href="#">SOCIAL</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="_html/sobre.html">SOBRE NÓS</a></li>
         </ul>
         <ul id="direita">
-            <li><a id="criar-conta" href="#">CONTATO</a></li>
+            <li><a id="criar-conta" href="_html/formulario.html">CONTATO</a></li>
         </ul>
     </nav>
     <div id="chamada">
