--- a/Prj_Pizza_Proz/_html/promocoes.html
+++ b/Prj_Pizza_Proz/_html/promocoes.html
@@ -5,6 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="../_script/script_promocoes.js"></script>
+    <script defer type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <title>Pizzaria PROZ NÓS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,10 +77,66 @@
         <div id="promocao-centro">
             <div id="promocoes">
                 <ul>
-                    <li><img src="../_imagens/pizza-calabresa.jpg" alt=""></li>
+                    <li><img src="../_imagens/pizza%20ex.jpg" alt=""></li>
                     <li>
-                        <h5>Calabresa</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                        <h5>Pizza com Refri</h5>
+                        <p>Segunda feira é dia de pizza com refrigerante 2 litros gratis! <br>R$ 35,00</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/combo.jpeg" alt=""></li>
+                    <li>
+                        <h5>Combo família</h5>
+                        <p>De segunda a quinta Combo Familia com refrigerante <br>R$ 80,00</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/frutas.jpg" alt=""></li>
+                    <li>
+                        <h5>Salada de frutas</h5>
+                        <p>Experimente nossas pizzas doces! Salada de frutas<br>R$ 40,00</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/quinta.jpg" alt=""></li>
+                    <li>
+                        <h5>Quinta maluca</h5>
+                        <p>Monte seu combo com refri e sobremesa com de 20% de desconto! Imperdível!!!</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/mussi.jpg" alt=""></li>
+                    <li>
+                        <h5>Mussi de chocolate</h5>
+                        <p>Expiremente nossas sobremesas!! Mussi de chocolate em promoção!!!</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/sucos.jpg" alt=""></li>
+                    <li>
+                        <h5>Sucos naturais</h5>
+                        <p>Temos opções de sucos naturais, feitos com poupa de frutas!!</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/torta_holandesa1.jpg" alt=""></li>
+                    <li>
+                        <h5>Torta holandesa</h5>
+                        <p>Nossa torta holandesa tem sabor incomparável!!! Experimente!!</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/classica.jpg" alt=""></li>
+                    <li>
+                        <h5>Mussarela clássica</h5>
+                        <p>Pizza mussarela clássica média! Peça agora!! <br> R$ 19,90</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li><img src="../_imagens/bordas.jpg" alt=""></li>
+                    <li>
+                        <h5>Bordas especiais</h5>
+                        <p>Todas as pizzas com bordas recheadas, crocantes à sua escolha!! +R$ 3,00</p>
                     </li>
                 </ul>
                 <ul>
@@ -87,75 +147,26 @@
                     </li>
                 </ul>
                 <ul>
+                    <li><img src="../_imagens/presunto.jpg" alt=""></li>
+                    <li>
+                        <h5>Presunto</h5>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                    </li>
+                </ul>
+                <ul>
                     <li><img src="../_imagens/pizza-portuguesa.jpg" alt=""></li>
                     <li>
                         <h5>Portuguesa</h5>
                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
                     </li>
                 </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
+                <!--<ul>
+                    <li><img src="../_imagens/pizza_amor.jpeg" alt=""></li>
                     <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
+                        <h5>Pizza lovers</h5>
+                        <p>Pizza para o dia dos namorados!! Supreenda seu amor!!</p>
                     </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li><img src="" alt=""></li>
-                    <li>
-                        <h5>SABOR</h5>
-                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    </li>
-                </ul>
+                </ul>-->
 
             </div>
         </div>
@@ -165,7 +176,5 @@
     </div>
 </section>
 
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
